; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_scroll_region_down.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_scroll_region_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grid_view_scroll_region_down(%struct.grid* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.grid*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.grid* %0, %struct.grid** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.grid*, %struct.grid** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i64 @grid_view_y(%struct.grid* %9, i64 %10)
  store i64 %11, i64* %6, align 8
  %12 = load %struct.grid*, %struct.grid** %5, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @grid_view_y(%struct.grid* %12, i64 %13)
  store i64 %14, i64* %7, align 8
  %15 = load %struct.grid*, %struct.grid** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = add nsw i64 %16, 1
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i64, i64* %6, align 8
  %21 = sub nsw i64 %19, %20
  %22 = load i64, i64* %8, align 8
  %23 = call i32 @grid_move_lines(%struct.grid* %15, i64 %17, i64 %18, i64 %21, i64 %22)
  ret void
}

declare dso_local i64 @grid_view_y(%struct.grid*, i64) #1

declare dso_local i32 @grid_move_lines(%struct.grid*, i64, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
